--- a/services/ratings-catalog/src/main/resources/application.properties
+++ b/services/ratings-catalog/src/main/resources/application.properties
@@ -1,5 +1,3 @@
 server.port=${NOMAD_HOST_PORT_http:8090}
-spring.application.name = this-service
+spring.application.name = ratings
 spring.cloud.consul.discovery.register=false
-
-#logging.level.org.springframework.boot = DEBUG
