--- a/services/movies-catalog/src/main/resources/application.properties
+++ b/services/movies-catalog/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port=${NOMAD_HOST_PORT_http:8090}
+spring.cache.type=redis
+#spring.redis.host=redis-cache.service.consul
+spring.redis.host=192.168.101.46
+spring.redis.port=6379
+spring.redis.database=2
